--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "mongoose": "^5.11.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mqtt": "^4.2.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
